--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "plugins": [
       {
-        "name": "next"
+        "name": "next",
+         "@shared/*": ["src/shared/*"]
       }
     ],
     "paths": {
